Resolve some fn-form layout issues

--- a/app/assets/stylesheets/renalware/partials/_patient_search.scss
+++ b/app/assets/stylesheets/renalware/partials/_patient_search.scss
@@ -7,6 +7,7 @@ $btn-hover-color: darken($dark-grey, 10%);
   width: 210px;
 }
 
+.fn-form.patient-search-form,
 .patient-search-form {
 
   button.button.tiny.postfix {
